# hypercolumn

./: .gitignore  CMakeLists.txt  README.md
awpipl2/: CMakeLists.txt  Makefile
awpipl2/borland/: awpipl2b.bpr  awpipl2b.cbproj  awpipl2b.stat
awpipl2/doc/: Doxyfile  awpIpl 2.doc  awp_filtering.doc  conmmand blob.doc
awpipl2/docs/: __awp_color_8c.html  __awp_color_8c.js  __awp_color_8c_source.html  __awp_color_8h.html  __awp_color_8h.js  __awp_color_8h_source.html  __awp_h_s_l_8h.html  __awp_h_s_l_8h.js  __awp_h_s_l_8h_source.html  __awp_h_s_v_8h.html  __awp_h_s_v_8h.js  __awp_h_s_v_8h_source.html  __awpio_8c.html  __awpio_8c.js  __awpio_8c_source.html  __awpipl_8h.html  __awpipl_8h.js  __awpipl_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  awp_approx_8c.html  awp_approx_8c.js  awp_approx_8c_source.html  awp_base_analysis_8c.html  awp_base_analysis_8c.js  awp_base_analysis_8c_source.html  awp_blur_8c.html  awp_blur_8c.js  awp_blur_8c_source.html  awp_camera_8c.html  awp_camera_8c.js  awp_camera_8c_source.html  awp_color_8c.html  awp_color_8c.js  awp_color_8c_source.html  awp_detector_unit_8c.html  awp_detector_unit_8c.js  awp_detector_unit_8c_source.html  awp_distance_8c.html  (+246 more)
awpipl2/include/: awperror.h  awpipl.h  config.h
awpipl2/lib/: awpipl2.txt
awpipl2/src/: _awpColor.c  _awpio.c  awpApprox.c  awpBaseAnalysis.c  awpBlur.c  awpColor.c  awpDistance.c  awpEdge.c  awpGauss.c  awpInterpolation.c  awpMedian.c  awpNorm.c  awpchannels.c  awpcommon.c  awpcontour.c  awpcontrast.c  awpconvert.c  awpcopypaste.c  awpdraw.c  awpfft.c  awpframeprocess.c  awpgeometry.c  awpget.c  awpintegralfeatures.c  awpio.c  awpipl.def  awplbp.c  awpmain.c  awpmaskconvolution.c  awpopencv.c  awppoints.c  awpstroke.c  awpthreshold.c
awplflib/: CMakeLists.txt  Makefile  README.md  eng.cpp  engine.xml
awplflib/borland/: awplflibb.bpf  awplflibb.bpr  awplflibb.cbproj  awplflibb.stat  awplflibb_xe7.cbproj  awplflibb_xe7.dsk
awplflib/doc/: Doxyfile  Drawing ROI.odt  afeature.txt  dfeature.txt  hfeature.txt  optical shemes.docx  sfeature.txt  vfeature.txt  сfeature.txt
awplflib/include/: LF.h  LFAttrFilter.h  LFBuffer.h  LFBuilder.h  LFCSBoost.h  LFCSFeature.h  LFCluster.h  LFCore.h  LFDatabase.h  LFDetector.h  LFDistance.h  LFEngine.h  LFFeatures.h  LFFileUtils.h  LFGeometry.h  LFHistogramm.h  LFImageProcessor.h  LFInterface.h  LFLabColor.h  LFLandmarks.h  LFMCDetector.h  LFMotion.h  LFParameter.h  LFPredictors.h  LFSample.h  LFScanners.h  LFSemantic.h  LFStrong.h  LFThresholdProc.h  LFUtils.h  LFVector.h  LFWeak.h  LFZone.h  _LF.h  _LFParameters.h
awplflib/src/: LFAttrFilter.cpp  LFAvgFeature.cpp  LFBuffer.cpp  LFBuilder.cpp  LFCSFeature.cpp  LFCascade.cpp  LFCluster.cpp  LFColorDetector.cpp  LFCommon.cpp  LFDatabase.cpp  LFDetectedItem.cpp  LFDetector.cpp  LFDistance.cpp  LFEngine.cpp  LFFeatureImpl.cpp  LFFeatures.cpp  LFFileUtils.cpp  LFGeometry.cpp  LFHistogramm.cpp  LFImage.cpp  LFImageProcessor.cpp  LFLabColor.cpp  LFLandmarks.cpp  LFMotion.cpp  LFParameter.cpp  LFPredictors.cpp  LFSabotage.cpp  LFSample.cpp  LFScanners.cpp  LFSemantic.cpp  LFStrong.cpp  LFStrongImpl.cpp  LFThresholdProc.cpp  LFUtils.cpp  LFVector.cpp  LFWeak.cpp  LFWeakImpl.cpp  LFZones.cpp  _LFMediaSource.cpp  (+2 more)
(+235 files in other folders)
